--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -1,6 +1,10 @@
 @use "../../styles/variables.scss" as *;
 
 .search {
+  @media all and (min-width: $fullPageWidth) {
+    display: none;
+  }
+  margin-top: 1em;
   min-width: fit-content;
   max-width: 40%;
   align-self: center;
@@ -79,7 +83,7 @@
       & > input {
         box-sizing: border-box;
         padding: 0.5em 1em;
-        // font-family: var(--bodyFont);
+        font-family: var(--font-text);
         color: var(--dark);
         font-size: var(--text-size-100);
         // font-size: 1.1em;
